fix: add gaps between links

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -26,6 +26,7 @@ ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
+gap: 16px;
 }
 
 a {
